# blackboxopt

./: .buildinfo  .pre-commit-config.yaml  .travis.yml  README.md  algorithms.base.html  algorithms.evolutionary.html  algorithms.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  space.html
blackboxopt/: space.py
blackboxopt/algorithms/: base.py  evolutionary.py  genetic.py
docs/: algorithms.base.rst  algorithms.evolutionary.rst  algorithms.rst  conf.py  index.rst  modules.rst  space.rst
tests/: conftest.py  test_space.py
