[tool.poetry]
name = "blackboxopt"
version = "0.1.0"
description = ""
authors = ["Ryan Downing <ryansdowning1@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.20.3"
tqdm = "^4.61.0"
jupyter = "^1.0.0"
jupyterlab = "^3.0.16"

[tool.poetry.dev-dependencies]
isort = "^5.8.0"
pylint = "^2.8.3"
Sphinx = "^4.0.2"
black = "^21.5b2"
pydata-sphinx-theme = "^0.6.3"
pre-commit = "^2.13.0"
pytest-cov = "^2.12.1"
pytest = "^6.2.4"
anybadge = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
